--- a/www/api/data/components/slides/componentTemplates/columns.html
+++ b/www/api/data/components/slides/componentTemplates/columns.html
@@ -2,5 +2,5 @@
   <img class="logo" src="img/logo.svg" alt="{logo}">
   <div class="text-content text-middle" data-simply-field="text">
   </div>
-  <img class="placeholder" data-simply-field="image" src="img/placeholder.jpg" class="cover" alt="">
+  <img class="placeholder cover" data-simply-field="image" src="img/placeholder.jpg" alt="">
 </section>
