--- a/www/api/data/components/slides/componentTemplates/grid.html
+++ b/www/api/data/components/slides/componentTemplates/grid.html
@@ -1,5 +1,5 @@
 <section class="slide slide-grid">
-  <img class="logo logo-white" src="img/logo-white.svg" alt="{logo}">
+  <img class="logo logo-white" src="img/logo-white.svg" alt="{witty tents}">
   <div class="text-content background-highlight text-middle text-center">
     <i class="icon fa" data-simply-field="icon"></i>
     <h2 data-simply-field="title">title</h2>
