moved each slide to seperate component fixed preview

--- a/www/api/data/components/slide-grid/componentTemplates/grid.html
+++ b/www/api/data/components/slide-grid/componentTemplates/grid.html
@@ -1,10 +1,10 @@
 <section class="slide slide-grid">
-  <img class="logo logo-white" src="img/logo-white.svg" alt="{witty tents}">
+  <img class="logo logo-white" src="img/logo-white.svg" alt="{logo}">
   <div class="text-content background-highlight text-middle text-center">
     <i class="icon fa" data-simply-field="icon"></i>
     <h2 data-simply-field="title">title</h2>
   </div>
-  <img data-simply-field="image" class="placeholder cover" src="img/placeholder.jpg">
+  <img alt="placeholder" data-simply-field="image" class="placeholder cover" src="img/placeholder.jpg">
   <div class="text-content" data-simply-field="text">
   </div>
   <div class="text-content background-grey" data-simply-field="more-text">
