added start() action, moved base-component init scripts to actions, called from start() added start() call on simply-content-loaded fixed timer component added hyperhyperspace made menu button always visible, except in edit- or present mode added present and next-slide pages refactored keys to use simplyview keyboard

--- a/www/api/data/components/slides/componentTemplates/welcome-slide.html
+++ b/www/api/data/components/slides/componentTemplates/welcome-slide.html
@@ -1,4 +1,4 @@
-<section class="slide slide-columns">
+<section class="slide slide-columns welcome-slide">
   <a href="https://www.muze.nl/" class="logo">made by {muze}</a>
   <div class="text-content text-middle" data-simply-field="text">
     <h2>Welcome</h2>
