--- a/www/api/data/components/menu/componentCss/menu.css
+++ b/www/api/data/components/menu/componentCss/menu.css
@@ -14,6 +14,12 @@
     bottom: 50px;
     right: 50px;
 }
+#SimplyPresentButton:hover {
+    opacity: 1;
+}
+body[data-simply-edit] #SimplyPresentButton {
+    display: none;
+}
 .simplyPresentLogo {
     width: 46px;
     margin-left: 1px;
