added share menu option WIP

--- a/www/api/data/components/menu/componentTemplates/menu.html
+++ b/www/api/data/components/menu/componentTemplates/menu.html
@@ -7,5 +7,6 @@
         <li class="ds-dropdown-item" data-simply-command="edit">Edit</li>
         <li class="ds-dropdown-item" data-simply-command="present">Present</li>
         <li class="ds-dropdown-item" data-simply-command="about">About</li>
+        <li class="ds-dropdown-item" data-simply-command="share">Share</li>
     </ul>
 </nav>
