--- a/www/api/data/pages/present/pageCss/present.css
+++ b/www/api/data/pages/present/pageCss/present.css
@@ -7,6 +7,7 @@
 }
 .slides-presentor > div {
   background-color: white;
+  overflow:hidden;
 }
 .slides-presentor .left-main {
   grid-column: 1 / 3;
