move share button to the 'sharing' component

--- a/www/api/data/components/menu/componentTemplates/menu.html
+++ b/www/api/data/components/menu/componentTemplates/menu.html
@@ -5,7 +5,7 @@
 <nav class="ds-dropdown-nav">
   <ul class="ds-dropdown-list">
     <li><a class="ds-dropdown-item" tabindex="0" data-simply-command="present">Present</a></li>
-    <li><a class="ds-dropdown-item" tabindex="0" data-simply-command="share">Share</a></li>
+    <!-- li><a class="ds-dropdown-item" tabindex="0" data-simply-command="share">Share</a></li -->
     <li><a class="ds-dropdown-item" tabindex="0" data-simply-command="edit">Edit</a></li>
     <li class="ds-dropdown-divider"></li>
     <li><a class="ds-dropdown-item" tabindex="0" data-simply-command="about">About</a></li>
