remove backdrop by default, only show it when menu is active. rework z-index to make it go over the button so that clicking twice will hide the menu again.

--- a/www/api/data/components/menu/componentCss/menu.css
+++ b/www/api/data/components/menu/componentCss/menu.css
@@ -1,36 +1,40 @@
 #SimplyPresentButton {
-    background-color: white;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    box-sizing: border-box;
-    box-shadow: 1px 1px 5px #888;
-    position: fixed;
-    z-index: 999999;
-    opacity: 0.5;
-    cursor: pointer;
-    padding: 6px;
-    display: flex;
-    bottom: 50px;
-    right: 50px;
-    min-height: unset;
+  background-color: white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 5px #888;
+  position: fixed;
+  z-index: 999998;
+  opacity: 0.5;
+  cursor: pointer;
+  padding: 6px;
+  display: flex;
+  bottom: 50px;
+  right: 50px;
+  min-height: unset;
 }
 #SimplyPresentButton:focus,
 #SimplyPresentButton:hover {
-    opacity: 1;
+  opacity: 1;
 }
 body[data-simply-edit] #SimplyPresentButton {
-    display: none;
+  display: none;
 }
 .simplyPresentLogo {
-    width: 46px;
-    margin-left: 1px;
+  width: 46px;
+  margin-left: 1px;
 }
 #SimplyPresentBackdrop {
-    position: fixed;
-    z-index: 999998;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  display: none;
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#SimplyPresentState:checked ~ #SimplyPresentBackdrop {
+  display: block;
 }
