committing Yvo's work

--- a/www/api/data/components/sharing/componentTemplates/sharing.html
+++ b/www/api/data/components/sharing/componentTemplates/sharing.html
@@ -8,12 +8,16 @@
        >
     <template data-simply-template="3">
       <div>
-        <a data-simply-field="hhsWords" data-simply-transformer="wordsLink"></a>
+        <a class="ds-button ds-button-default" data-simply-field="hhsWords" data-simply-content="fixed" data-simply-command="copyLink" data-simply-transformer="slidesLink">Slides</a>
+        <a class="ds-button ds-button-default" data-simply-field="hhsWords" data-simply-content="fixed" data-simply-command="copyLink" data-simply-transformer="nextSlideLink">Next slide</a>
+        <a class="ds-button ds-button-default" data-simply-field="hhsWords" data-simply-content="fixed" data-simply-command="copyLink" data-simply-transformer="timerLink">Timer</a>
+        <a class="ds-button ds-button-default" data-simply-field="hhsWords" data-simply-content="fixed" data-simply-command="copyLink" data-simply-transformer="speakerNotesLink">Speaker notes</a>
+        <br>
+        Click the button to copy the sharing URL.<br>
+        <a data-simply-field="hhsWords" data-simply-content="fixed" data-simply-command="copyLink" data-simply-transformer="slidesLink">
+          <span data-simply-field="hhsWords" data-simply-transformer="slidesLink"></span>
+        </a>
       </div>
-      <button class="ds-button ds-button-default" data-simply-command="copySharing">Copy</button>
-    </template>
-    <template data-simply-template="1">
-      <button class="ds-button ds-button-default" data-simply-command="share" >Start sharing</button> 
     </template>
     <template data-simply-template="0">
       <button class="ds-button ds-button-default" data-simply-command="share" >Start sharing</button> 
