--- a/www/api/data/components/timer/componentCss/timer.css
+++ b/www/api/data/components/timer/componentCss/timer.css
@@ -3,10 +3,10 @@
     --timer-border-radius: 3px;
     --timer-border-color: var(--support-dark);
   	--timer-box-padding: 0.5em;
-    --timer-current-color: var(--support-dark);
-    --timer-cursor-color: var(--highlight-dark);
+    --timer-current-color: var(--support-light);
+    --timer-cursor-color: #777;
     --timer-cursor-width: 4px;
-    --timer-padding: 2em;
+    --timer-padding: 0.5em;
     --timer-bar-color: var(--grey-light);
     --timer-cursor-marker-size: 10px;
 }
@@ -25,7 +25,7 @@
 	width: 100%;
 	list-style: none;
 	margin: 0;
-	margin-top: 4em;
+	margin-top: 1em;
     gap: 2px;
     border-radius: var(--timer-border-radius);
 }
@@ -43,26 +43,27 @@
 .slides-timer-slide.slides-timer-current {
 	background-color: var(--timer-current-color);
 }
-.slides-timer-time input {
+.slides-timer-time span {
 	display: block;
 	appearance: none;
 	border: 0;
 	font-size: 2em;
 	text-align:right;
 	width: 6em;
+  	color: black;
 }
-.slides-timer-time {
+.slides-timer-time.total-time {
 	position: absolute;
 	top: var(--timer-padding);
 	right: var(--timer-padding);
 	text-align:right;
 }
-.slides-timer-slide .slides-timer-time {
+.slides-timer-time.slide-time {
 	right: auto;
 	left: var(--timer-padding);
 	text-align:left;
 }
-.slides-timer-slide .slides-timer-time input {
+.slides-timer-time.slide-time span {
 	text-align:left;
 }
 .slides-timer-cursor {
@@ -73,6 +74,7 @@
     background-color: var(--timer-cursor-color);
 	margin-left: calc(var(--timer-padding) + var(--timer-box-padding) + var(--timer-border-size));
 	z-index:10;
+    transition: left 1s;
 }
 .slides-timer-cursor::before {
     content: "";
