--- a/www/api/data/pages/present/pageCss/present.css
+++ b/www/api/data/pages/present/pageCss/present.css
@@ -7,7 +7,8 @@
 }
 .slides-presentor > div {
   background-color: white;
-  overflow:hidden;
+  overflow: hidden;
+  position: relative;
 }
 .slides-presentor .left-main {
   grid-column: 1 / 3;
