--- a/src/components/slides-editmode/componentCss/4. editmode.css
+++ b/src/components/slides-editmode/componentCss/4. editmode.css
@@ -1,6 +1,9 @@
 body[data-simply-edit] {
 	overflow-y: auto;
 }
+.slides-editmode-options {
+  display: none;
+}
 .slides.slides-edit {
   overflow-y: auto;
   font-size: 1.1vw;
@@ -8,15 +11,18 @@ body[data-simply-edit] {
   scroll-snap-type: none;
   overflow-x: auto;
 }
-.slides-edit .slide-edit {
-  	width: 49%;
+.slide-edit .slides-editmode-options {
+  display: block;
+}
+.slides-edit .slide {
+	height: 50vh;
 	float: left;
 	margin: 0 0 0.5% 0.5%;
 	box-shadow: 2px 2px 5px #888;
 }
-.slides-edit .slide {
-	width: 100%;
-	height: 50vh;
+.slides-edit .slide-edit {
+  	width: 49%;
+    height: auto;
 }
 .slide::before {
 	margin-top: 24px !important;
@@ -33,4 +39,8 @@ body[data-simply-edit] {
 }
 .slide-edit-field {
   padding: 0.2em;
+}
+[data-simply-readonly] {
+  user-select: none;
+  outline: 0 !important;
 }
