--- a/src/components/slides-editmode/componentTemplates/slides-editmode.html
+++ b/src/components/slides-editmode/componentTemplates/slides-editmode.html
@@ -3,26 +3,15 @@
     <label>Allowed presentation time is 
       <input type="number" data-simply-field="totalTime" data-simply-transformer="secondsToMinutes" value=10 min=0 step=5> minutes.
       <br>
-      This allows <span data-simply-field="totalTime" data-simply-transformer="timePerSlide"></span> seconds per slide.
+      This allows <span data-simply-field="totalTime" data-simply-transformer="timePerSlide" data-simply-readonly></span> seconds per slide.
     </label>
   </div>
 </div>
 <div class="slides slides-edit" data-simply-list="slides" data-simply-sortable>
-  <template>
-    <div class="slide-edit">
-      <div data-simply-field="data-simply-template" data-simply-content="template">
-        <template data-simply-template="title" rel="title"></template>
-        <template data-simply-template="highlight" rel="highlight"></template>
-        <template data-simply-template="grid" rel="grid"></template>
-        <template data-simply-template="half-grid" rel="half-grid"></template>
-        <template data-simply-template="columns" rel="columns"></template>
-        <template data-simply-template="full" rel="full"></template>
-      </div>
-      <div class="slide-notes slide-edit-field">
-        <label>Speaker notes
-          <textarea data-simply-field="notes"></textarea>
-        </label>
-      </div>
-    </div> 
-  </template>
+  <template data-simply-template="title" rel="title-edit"></template>
+  <template data-simply-template="highlight" rel="highlight-edit"></template>
+  <template data-simply-template="grid" rel="grid-edit"></template>
+  <template data-simply-template="half-grid" rel="half-grid-edit"></template>
+  <template data-simply-template="columns" rel="columns-edit"></template>
+  <template data-simply-template="full" rel="full-edit"></template>
 </div>
