added a .text-smaller class for the about dialog

--- a/src/components/slides/componentCss/2-slides-content.css
+++ b/src/components/slides/componentCss/2-slides-content.css
@@ -41,6 +41,9 @@
 .text-center img {
 	display: inline-block;
 }
+.text-smaller {
+    font-size: smaller;
+}
 img.cover {
 	width: 100%;
 	height: 100%;
